--- a/.github/workflows/docker-image-publish.yml
+++ b/.github/workflows/docker-image-publish.yml
@@ -29,11 +29,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install doctl
-      run: |
-        sudo snap install doctl
-
-    - name: Authenticate with DigitalOcean
-      run: doctl auth init --access-token ${{ secrets.DO_ACCESS_TOKEN }}
+      uses: digitalocean/action-doctl@v2
+      with:
+        token: ${{ secrets.DO_ACCESS_TOKEN }}
 
     - name: Log in to DigitalOcean Container Registry via doctl
       run: doctl registry login
