--- a/.github/workflows/docker-image-publish.yml
+++ b/.github/workflows/docker-image-publish.yml
@@ -12,13 +12,7 @@ name: Build and Push Docker Image to DigitalOcean
 on:
   push:
     branches:
-      - main # Trigger action on push to the 'main' branch
-
-  workflow_dispatch:
-
-env:
-  REGISTRY: registry.digitalocean.com/nonni
-  IMAGE_NAME: dwn-server
+      - main
 
 jobs:
   build:
@@ -37,7 +31,7 @@ jobs:
       run: doctl registry login
 
     - name: Build Docker image
-      run: docker build -t ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }} .
+      run: docker build -t registry.digitalocean.com/nonni/dwn-server .
 
     - name: Push Docker image to DigitalOcean Registry
-      run: docker push ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}
+      run: docker push registry.digitalocean.com/nonni/dwn-server
